[package]
name = "nstdapi"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
capi = ["quote", "syn"]

[dependencies]
quote = { version = "1.0", optional = true, default-features = false }
syn = { version = "1.0", optional = true, default-features = false, features = [
    "full", "parsing", "printing", "proc-macro"
] }
