[package]
name = "nstdapi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A helper crate for `nstd` providing manipulation of an item's ABI attributes."

[lib]
proc-macro = true

[features]
capi = ["quote", "syn"]

[dependencies]
quote = { version = "1.0", optional = true, default-features = false }
syn = { version = "1.0", optional = true, default-features = false, features = [
    "full", "parsing", "printing", "proc-macro"
] }
