[package]
name = "nstdapi"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A helper crate for `nstd` providing manipulation of an item's ABI attributes."

[lib]
proc-macro = true

[features]
capi = ["quote", "syn"]
link = ["capi", "quote", "syn"]

[dependencies]
cfg-if = "1.0"
quote = { version = "1.0", optional = true, default-features = false }
syn = { version = "2.0", optional = true, default-features = false, features = [
    "full", "parsing", "printing", "proc-macro"
] }
